--- a/CaliburnPlayGround.csproj
+++ b/CaliburnPlayGround.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Caliburn.Micro" Version="4.0.173" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
   </ItemGroup>
 
   <ItemGroup>
